--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,17 @@
 
   <div id="output">
       TODO:
-      <li>svgs for dart??? svgs for dart. svgs. wordclouds?</li>
+      <li>static hash of nodes keyed by id</li>
+      <li>draw edges between any two nodes</li>
+      <li>draggable nodes (update all edges that touch the node)</li>
+      <li>set fill color of nodes (set color and then any node you touch is that color till you unset?)</li>
+      <li>set fill color edges</li>
+      <li>set fill color of text???</li>
+      <li>serialize conspiracy board (save/load) (also do the next id thingy)</li>
+      <li> auto load nodes from known passphrases</li>
+      <li>ability to add new nodes (wont be marked as from passphrase)</li>
+      <li> ability to delete nodes (but not if known passphrase)</li>
+      <li>nodes marked as known passphrase will link automatically to the audiolog file and to the loras thing</li>
   </div>
 
 </body>
