in theory i can do some very dumb shit with all the nodes in the same position

--- a/web/index.html
+++ b/web/index.html
@@ -16,8 +16,7 @@
 
   <div id="output">
       TODO:
-      <li>ask server, given a list of known passphrases, what edges exist and with what weights</li>
-      <li> auto load nodes from known passphrases </li>
+      <li> auto load nodes from known passphrases (oh god thousands of edges)</li>
       <li>nodes marked as known passphrase will link automatically to the audiolog file and to the loras thing</li>
       <li>set fill color of nodes (set color and then any node you touch is that color till you unset?)</li>
       <li>set fill color of text???</li>
