--- a/web/index.html
+++ b/web/index.html
@@ -16,6 +16,7 @@
 
   <div id="output">
       TODO:
+      <li>ability to change string threshold</li>
       <li> auto load nodes from known passphrases (oh god thousands of edges)</li>
       <li>nodes marked as known passphrase will link automatically to the audiolog file and to the loras thing</li>
       <li>set fill color of nodes (set color and then any node you touch is that color till you unset?)</li>
