--- a/web/index.html
+++ b/web/index.html
@@ -15,17 +15,18 @@
 <body>
 
   <div id="output">
-      TODO:
-      <li>ability to change string threshold</li>
-      <li> auto load nodes from known passphrases (oh god thousands of edges)</li>
-      <li>nodes marked as known passphrase will link automatically to the audiolog file and to the loras thing</li>
-      <li>set fill color of nodes (set color and then any node you touch is that color till you unset?)</li>
-      <li>set fill color of text???</li>
-      <li>ability to set weight of an edge</li>
-      <li>ui elements, such as button to select nodes to draw edges between</li>
-      <li>serialize conspiracy board (save/load) (also do the next id thingy)</li>
-      <li>ability to add new nodes (wont be marked as from passphrase)</li>
-      <li> ability to delete nodes (but not if known passphrase)</li>
+      TODO: (first finish passphrase viewer, then consider conspiracy board maker)
+      <ul>
+          <li>number slider for threshold of considering a connection</li>
+          <li>List view of passphrases you know about (mark if it can be graphed or not (i.e. has transcript)</li>
+          <li>clicking a passphrase you know about displays a popup index card full of facts on the passphrase, links to audio player, lomat, a transcript reader and the ability to filter the current graph by it</li>
+          <li>transcript viewer looks like a dot matrix strong bad style print out?</li>
+          <li>select color, anything you click turns into that color (node/edge)</li>
+          <li>text inside node is automatically the inverse of the color the background</li>
+          <li>button to jumble the graph, or organize it in different ways</li>
+          <li>button to save current graph with name (what nodes are in it, what colors, etc)</li>
+
+      </ul>
   </div>
 
 </body>
